--- a/first.html
+++ b/first.html
@@ -38,13 +38,37 @@
 		</article>
 		<!-- <iframe src="http://lastkiss.net/htmlstudy/first.html" width="50%" height="90%"></iframe> -->
 
-	<aside> why 	
+		<aside> why 	
 			<nav class="navi">
 				<ol>
 					<li><a href="#">이용안내</a></li>
 					<li><a href="#">객실소개</a></li>
 				</ol>
 			</nav>
-		</aside></section>				
+		</aside>
+		<table border="1">
+			<caption> Table Test</caption>
+			<col style="background: blue">
+			<colgroup span="2" style="background: skyblue">
+			<thead>
+				<tr>
+					<th colspan="2">1행1열</th>	
+					<th>1행2열</th>	
+				</tr>
+			</thead>
+			<tbody>
+			<tr>
+					<td rowspan="2">2행1열</td>	
+					<td>2행2열</td>	
+					<td>2행3열</td>	
+				</tr>
+				<tr>
+					<td>3행1열</td>	
+					<td>3행2열</td>	
+	<!-- 				<td>3행3열</td>	
+ -->			</tr>
+			</tbody>
+		</table>	
+	</section>		
 </body>
 </html>
