--- a/Html5Study/WebContent/First.html
+++ b/Html5Study/WebContent/First.html
@@ -8,7 +8,7 @@
 	<![endif] -->
 <style>
 a {
-	color: red;
+	color: blue;
 }
 
 aside {
@@ -19,7 +19,11 @@ aside {
 }
 
 figcaption {
-	color: red;
+	color: blue !important;
+	font-weight: bold;
+}
+figcaption {
+	color: red !important;
 	font-weight: bold;
 }
 </style>
