--- a/Portfolio/WebContent/framework/test.html
+++ b/Portfolio/WebContent/framework/test.html
@@ -27,10 +27,10 @@
     </div>
     <div class="row">
       <div class="col-4">
-      		<img style="padding-right:10px" " width="100%" height="70%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLDW5nCOkzz3KKzvX6NgOc3ScYhdiVOHA4IrUwIWGoxBwD56nQ:">
+      		<img style="margin-right:10px" " width="100%" height="70%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLDW5nCOkzz3KKzvX6NgOc3ScYhdiVOHA4IrUwIWGoxBwD56nQ:">
       		<h3>Appify</h3>
       </div>
-      <div class="col-4"><img style="padding-right:10px" width="100%" height="70%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEUPmWzwk1U9vG_rMDQ4XU-5ckeowujOfEDSkxuHNSD_Tp_dISGA">
+      <div id="sunflower" class="col-4"><img style="padding-right:10px" width="100%" height="70%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEUPmWzwk1U9vG_rMDQ4XU-5ckeowujOfEDSkxuHNSD_Tp_dISGA">
       	<h3>Sunflower</h3>
       </div>
       <div class="col-4"><img width="100%" height="70%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTr-g_pIAurtdD2cyJ4SjPVDVXCzRln_l449xBnYA9AECwrueYU7g"><h3>Bokeh</h3>
