--- a/Html5Study/WebContent/First.html
+++ b/Html5Study/WebContent/First.html
@@ -11,6 +11,21 @@ a {
 	color: blue;
 }
 
+a:link {
+	color:blue;
+}
+
+a:visited {
+ 	color: purple;
+ 	font-size: larger;
+	text-decoration: line-through;
+}
+
+a:hover{
+	color:red;
+}
+
+
 aside {
 	width: 200;
 	height: "auto";
@@ -25,6 +40,36 @@ figcaption {
 figcaption {
 	color: red !important;
 	font-weight: bold;
+}
+
+h2{
+	text-shadow: 2px -2px 0px gray;
+	text-decoration: underline;
+	text-decoration: overline underline line-through;
+}
+
+p{
+	line-height: 1em;
+	text-indent: 10%;
+	text-indent: 1em;
+}
+
+ul{
+	list-style-type: square;
+	list-style-position: inside; 
+}
+
+
+#top:hover{
+	color:red;
+}
+
+#top::before{
+	content:"내용:";
+}
+
+#top::after{
+	content:"...";
 }
 </style>
 </head>
