--- a/Portfolio/WebContent/bootstrap/bootstrap-prestructure.htm
+++ b/Portfolio/WebContent/bootstrap/bootstrap-prestructure.htm
@@ -2,6 +2,7 @@
 <!-- saved from url=(0097)https://storage.googleapis.com/supplemental_media/udacityu/2730818600/bootstrap-prestructure.html -->
 <html>
 <head>
+<!-- 	<meta name="viewport" content="width=device-width.initial-scale=1"> -->
   <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css"> 
@@ -17,10 +18,11 @@
       <div class="col-md-4">
         <img class="title-logo" src="./bootstrap-prestructure_files/100x100"></div>
         <div class="col-md-8 text-uppercase text-right">
-          <h1 class="title-super text-thin">Jane Doette</h1>
+          <h1 class="title-super"><b>Jane Doette</b></h1>
           <h4>Front-end Ninja</h4>
         </div>
       </div>
+      <hr>
       <div>
         <img class="img-fluid" src="./bootstrap-prestructure_files/1140x350" >
       </div>
@@ -29,9 +31,13 @@
           <h2 class="text-muted top-padding-small">Featured Work</h2>
         </div>
       </div>
+  
       <div class="row text-center">
         <div class="col-md-6">
-          <img class="img-fluid" src="./bootstrap-prestructure_files/555x300" data-toggle="modal" data-target="#project1">
+<!--           <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQb8J1p9BVqZB-zwEeb_se2PXmic9CBBMagN7cfxluKv7dPtbucMA" 
+          data-toggle="modal" data-target="#project1"> -->
+          <img class="img-fluid" src="./bootstrap-prestructure_files/555x300" 
+          data-toggle="modal" data-target="#project1">
           <h3>Appify</h3>
           <p><a href="http://github.com/">Link to project</a></p>
         </div>
@@ -73,4 +79,5 @@
       </div>
     </div>
   </body>
+ 
   </html>
