--- a/ModernWeb-HTML/ch06/MobileWebLayout.html
+++ b/ModernWeb-HTML/ch06/MobileWebLayout.html
@@ -2,186 +2,263 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-    <title>Chapter 6</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
+<meta charset="utf-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+<title>Chapter 6</title>
+<style>
+* {
+	margin: 0;
+	padding: 0;
+}
 
-        body {
-            font-family: 'Helvetica', sans-serif;
-        }
+body {
+	font-family: 'Helvetica', sans-serif;
+}
 
-        li {
-            list-style: none;
-        }
+li {
+	list-style: none;
+}
 
-        a {
-            text-decoration: none;
-        }
+a {
+	text-decoration: none;
+}
 
-        #main_header {
-            height: 45px;
-            background: url('header_background.png');
-            position: relative;
-            text-align: center;
-            line-height: 45px;
-        }
+#fixed_top {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+}
 
-            #main_header > h1 {
-                color: white;
-            }
+#fixed_top>#main_header {
+	height: 45px;
+	background: url('header_background.png');
+	position: relative;
+	text-align: center;
+	line-height: 45px;
+}
 
-            #main_header > a, #main_header > label {
-                display: block;
-                height: 32px;
-                position: absolute;
-            }
+#fixed_top>#main_header>h1 {
+	color: white;
+}
 
-                #main_header > a.left {
-                    width: 62px;
-                    left: 0px;
-                    top: 7px;
-                    background: url('sprites.png');
-                    background-position: 0px 0px;
-                    text-indent: -99999px;
-                }
+#fixed_top>#main_header>a, #main_header>label {
+	display: block;
+	height: 32px;
+	position: absolute;
+}
 
-                #main_header > label.right {
-                    width: 32px;
-                    right: 5px;
-                    top: 7px;
-                    background: url('sprites.png');
-                    background-position: -62px 0px;
-                    text-indent: -99999px;
-                }
+#fixed_top>#main_header>a.left {
+	width: 62px;
+	left: 0px;
+	top: 7px;
+	background: url('sprites.png');
+	background-position: 0px 0px;
+	text-indent: -99999px;
+}
 
-                #toggle {display: none;}
-                #toggle + #wrap > #toggle_gnb_wrap {display: none;}
-                #toggle:checked + #wrap > #toggle_gnb_wrap {display: block;}
+#fixed_top>#main_header>label.right {
+	width: 32px;
+	right: 5px;
+	top: 7px;
+	background: url('sprites.png');
+	background-position: -62px 0px;
+	text-indent: -99999px;
+}
 
-                #toggle_gnb_wrap {
-                    background: #363636;
-                    padding: 15px;
-                }
-                #toggle_gnb {
-                    background: #ffffff;
-                    padding: 5px;
-                }
+#toggle {
+	display: none;
+}
 
-                #toggle_gnb > ul {overflow: hidden; }
-                #toggle_gnb > ul > li {
-                    width: calc((100% - 20px) / 4);
-                    float: left;
-                }
+#toggle+#wrap>#fixed_top>#toggle_gnb_wrap {
+	display: none;
+}
 
-                #top_gnb {
-                    overflow: hidden;
-                    border-bottom: 1px solid black;
-                    background: #b42111;
-                }
-                #top_gnb > div > a {
-                    float: left;
-                    width: 25%;
-                    height: 35px;
-                    line-height: 35px;
-                    text-align: center;
-                    color: white;
-                }
+#toggle:checked+#wrap>#fixed_top>#toggle_gnb_wrap {
+	display: block;
+}
 
-                #bottom_gnb {
-                    display: table;
-                    width: 100%;
-                    border-bottom: 1px solid black;
-                }
-                #bottom_gnb > div {
-                    display: table-cell;
-                    position: relative;
-                }
-                #bottom_gnb > div > a {
-                    display: block;
-                    height: 35px;
-                    line-height: 35px;
-                    text-align: center;
-                }
-                #bottom_gnb > div > a::before {
-                    display: block;
-                    position: absolute;
-                    top: 10px;
-                    left: -1px;
-                    width: 1px;
-                    height: 15px;
-                    border-left: 1px solid black;
-                    content: '';
-                }
+#toggle_gnb_wrap {
+	background: #363636;
+	padding: 15px;
+	/* position: absolute;
+	top: 45px;
+	left: 0;
+	right: 0; */
+}
 
-                #section_header {padding: 20px;}
-                #section_article {padding: 10px;}
+#toggle_gnb {
+	background: #ffffff;
+	padding: 5px;
+}
 
-                #main_footer {
-                    padding: 10px;
-                    border-top: 3px solid black;
-                    text-align: center;
-                }
-    </style>
+#toggle_gnb>ul {
+	overflow: hidden;
+}
+
+#toggle_gnb>ul>li {
+	width: calc(( 100% - 20px)/4);
+	float: left;
+}
+
+#top_gnb {
+	overflow: hidden;
+	border-bottom: 1px solid black;
+	background: #b42111;
+}
+
+#top_gnb>div>a {
+	float: left;
+	width: 25%;
+	height: 35px;
+	line-height: 35px;
+	text-align: center;
+	color: white;
+}
+
+#bottom_gnb {
+	display: table;
+	width: 100%;
+	border-bottom: 1px solid black;
+	background: white;
+}
+
+#bottom_gnb>div {
+	display: table-cell;
+	position: relative;
+}
+
+#bottom_gnb>div>a {
+	display: block;
+	height: 35px;
+	line-height: 35px;
+	text-align: center;
+}
+
+#bottom_gnb>div>a::before {
+	display: block;
+	position: absolute;
+	top: 10px;
+	left: -1px;
+	width: 1px;
+	height: 15px;
+	border-left: 1px solid black;
+	content: '';
+}
+
+#main_section {
+	margin-top: 110px;
+}
+
+#section_header {
+	padding: 20px;
+}
+
+#section_article {
+	padding: 10px;
+}
+
+#main_footer {
+	padding: 10px;
+	border-top: 3px solid black;
+	text-align: center;
+}
+</style>
 </head>
 <body>
-    <input id="toggle" type="checkbox" />
-    <div id="wrap">
+	<input id="toggle" type="checkbox" />
+	<div id="wrap">
+		<div id="fixed_top">
+			<header id="main_header">
+				<a class="left" href="#">
+					<!--Main-->
+				</a>
+				<h1>Mobile</h1>
+				<label class="right" for="toggle">Toggle</label>
+			</header>
+			<div id="toggle_gnb_wrap">
+				<div id="toggle_gnb">
+					<ul>
+						<li><a href="#">버튼</a></li>
+						<li><a href="#">버튼</a></li>
+						<li><a href="#">버튼</a></li>
+						<li><a href="#">버튼</a></li>
+						<li><a href="#">버튼</a></li>
+						<li><a href="#">버튼</a></li>
+						<li><a href="#">버튼</a></li>
+						<li><a href="#">버튼</a></li>
+					</ul>
+				</div>
+			</div>
+			<nav id="top_gnb">
+				<div>
+					<a href="#">버튼</a>
+				</div>
+				<div>
+					<a href="#">버튼</a>
+				</div>
+				<div>
+					<a href="#">버튼</a>
+				</div>
+				<div>
+					<a href="#">버튼</a>
+				</div>
+			</nav>
+			<nav id="bottom_gnb">
+				<div>
+					<a href="#">버튼</a>
+				</div>
+				<div>
+					<a href="#">버튼</a>
+				</div>
+				<div>
+					<a href="#">버튼</a>
+				</div>
+				<div>
+					<a href="#">버튼</a>
+				</div>
+				<div>
+					<a href="#">버튼</a>
+				</div>
+			</nav>
+		</div> <!-- fixed-top -->
 
-        <header id="main_header">
-            <a class="left" href="#"><!--Main--></a>
-            <h1>Mobile</h1>
-            <label class="right" for="toggle">Toggle</label>
-        </header>
-        <div id="toggle_gnb_wrap">
-            <div id="toggle_gnb">
-                <ul>
-                    <li><a href="#">버튼</a></li>
-                    <li><a href="#">버튼</a></li>
-                    <li><a href="#">버튼</a></li>
-                    <li><a href="#">버튼</a></li>
-                    <li><a href="#">버튼</a></li>
-                    <li><a href="#">버튼</a></li>
-                    <li><a href="#">버튼</a></li>
-                    <li><a href="#">버튼</a></li>
-                </ul>
-            </div>
-        </div>
-        <nav id="top_gnb">
-            <div><a href="#">버튼</a></div>
-            <div><a href="#">버튼</a></div>
-            <div><a href="#">버튼</a></div>
-            <div><a href="#">버튼</a></div>
-        </nav>
-        <nav id="bottom_gnb">
-            <div><a href="#">버튼</a></div>
-            <div><a href="#">버튼</a></div>
-            <div><a href="#">버튼</a></div>
-            <div><a href="#">버튼</a></div>
-            <div><a href="#">버튼</a></div>
-        </nav>
-
-        <section id="main_section">
-            <header id="section_header">
-                <h1>Lorem ipsum</h1>
-                <time>2012-12-09 : Birthday</time>
-            </header>
-            <article id="section_article">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <br />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <br />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </article>
-        </section>
-        <footer id="main_footer">
-            <h3>HTML5 + CSS3 Basic</h3>
-            <address>Website Layout Basic</address>
-        </footer>
-    </div>
+		<section id="main_section">
+			<header id="section_header">
+				<h1>Lorem ipsum</h1>
+				<time>2012-12-09 : Birthday</time>
+			</header>
+			<article id="section_article">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+					do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+					enim ad minim veniam, quis nostrud exercitation ullamco laboris
+					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+					reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+					pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+					culpa qui officia deserunt mollit anim id est laborum.</p>
+				<br />
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+					do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+					enim ad minim veniam, quis nostrud exercitation ullamco laboris
+					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+					reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+					pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+					culpa qui officia deserunt mollit anim id est laborum.</p>
+				<br />
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+					do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+					enim ad minim veniam, quis nostrud exercitation ullamco laboris
+					nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+					reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+					pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+					culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+		</section>
+		<footer id="main_footer">
+			<h3>HTML5 + CSS3 Basic</h3>
+			<address>Website Layout Basic</address>
+		</footer>
+	</div>
 </body>
 </html>
