--- a/ModernWeb-HTML/ch07/WebContent/TabletLayout.html
+++ b/ModernWeb-HTML/ch07/WebContent/TabletLayout.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Chapter 7</title>
+    <title>Tablet Layout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
         * {
@@ -118,6 +118,7 @@
             padding: 10px;
             border-top: 3px solid black;
             text-align: center;
+            margin-left: 200px;
         }
     </style>
 </head>
@@ -141,16 +142,16 @@
                 <li><a href="#">Button</a></li>
             </ul>
         </nav>
-    </div>
-        <nav id="main_lnb">
-            <ul>
-                <li><a href="#">Button</a></li>
-                <li><a href="#">Button</a></li>
-                <li><a href="#">Button</a></li>
-                <li><a href="#">Button</a></li>
-                <li><a href="#">Button</a></li>
-            </ul>
-        </nav>
+    </div> <!-- top_fixed -->
+    <nav id="main_lnb">
+        <ul>
+            <li><a href="#">Button</a></li>
+            <li><a href="#">Button</a></li>
+            <li><a href="#">Button</a></li>
+            <li><a href="#">Button</a></li>
+            <li><a href="#">Button</a></li>
+        </ul>
+    </nav>
     <div id="content_wrap">
         <div id="content">
             <article>
@@ -239,11 +240,11 @@
                 </p>
             </article>
         </div> <!--content-->
-    </div> <!--content_wrap-->
     <footer id="main_footer">
         <h3>HTML5 + CSS3 Basic</h3>
         <address>Website Layout Basic</address>
     </footer>
+    </div> <!--content_wrap-->
 </body>
 
 </html>
