--- a/ModernWeb-HTML/ch08/WebContent/SocialCommerceLayout.html
+++ b/ModernWeb-HTML/ch08/WebContent/SocialCommerceLayout.html
@@ -1,101 +1,170 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
-<title>Chapter 8</title>
-<style>
-* {
-	margin: 0;
-	padding: 0;
-	font: normal 12px "dotum";
-}
+    <meta charset="EUC-KR">
+    <title>Chapter 8</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            font: normal 12px "dotum";
+        }
 
-a {
-	text-decoration: none;
-}
+        a {
+            text-decoration: none;
+        }
 
-img {
-	border: 0;
-}
+        img {
+            border: 0;
+        }
 
-ul {
-	list-style: none;
-}
+        ul {
+            list-style: none;
+        }
 
-body {
-	width: 980px;
-	margin: 0 auto;
-	position: relative;
-}
+        body {
+            width: 980px;
+            margin: 0 auto;
+            position: relative;
+        }
 
-#main_header {
-	position: relative;
-	height: 75px;
-}
+        #main_header {
+            position: relative;
+            height: 75px;
+        }
 
-#main_header > h1.logo {
-	position: absolute;
-	left:15px; top: 10px;
-}
+            #main_header > h1.logo {
+                position: absolute;
+                left: 15px;
+                top: 10px;
+            }
 
-#main_header > div.login_menu {
-	position: absolute;
-	top: 10px; right: 0px;
-}
+            #main_header > div.login_menu {
+                position: absolute;
+                top: 10px;
+                right: 0px;
+            }
 
-#global_aside {
-	position: absolute;
-	left: 990px;
-	top: 75px;
-	width: 90px;
-}
-#global_aside > a {
-	display: block;
-	margin-bottom: 5px;
-}
-#top_gnb {
-	overflow: hidden;
-}
-#top_gnb > div.menu {
-	float: left;
-	width: 140px; height: 50px;
-	background: url("Images/top_gnb.png");
-}
+        #global_aside {
+            position: absolute;
+            left: 990px;
+            top: 75px;
+            width: 90px;
+        }
 
-#top_gnb > div.item_1 {background-position: 0px 0px;}
+            #global_aside > a {
+                display: block;
+                margin-bottom: 5px;
+            }
 
-</style>
+        #top_gnb {
+            overflow: hidden;
+        }
+
+            #top_gnb > div.menu {
+                float: left;
+                width: 140px;
+                height: 50px;
+                background: url("Images/top_gnb.png");
+            }
+
+            #top_gnb > div.item_1 {
+                background-position: 0px 0px;
+            }
+            #top_gnb > div.item_2 {
+                background-position: 0px -50px;
+            }
+            #top_gnb > div.item_3 {
+                background-position: 0px -100px;
+            }
+            #top_gnb > div.item_4 {
+                background-position: 0px -150px;
+            }
+            #top_gnb > div.item_5 {
+                background-position: 0px -200px;
+            }
+            #top_gnb > div.item_6 {
+                background-position: 0px -250px;
+            }
+            #top_gnb > div.item_7 {
+                background-position: 0px -300px;
+            }
+
+            #top_gnb > div.item_1:hover {
+                background-position: 0px -350px;
+            }
+            #top_gnb > div.item_2:hover {
+                background-position: 0px -400px;
+            }
+            #top_gnb > div.item_3:hover {
+                background-position: 0px -450px;
+            }
+            #top_gnb > div.item_4:hover {
+                background-position: 0px -500px;
+            }
+            #top_gnb > div.item_5:hover {
+                background-position: 0px -550px;
+            }
+            #top_gnb > div.item_6:hover {
+                background-position: 0px -600px;
+            }
+            #top_gnb > div.item_7:hover {
+                background-position: 0px -650px;
+            }
+            #top_gnb > div.item_1:active {
+                background-position: 0px -350px;
+            }
+            #top_gnb > div.item_2:active {
+                background-position: 0px -400px;
+            }
+            #top_gnb > div.item_3:active {
+                background-position: 0px -450px;
+            }
+            #top_gnb > div.item_4:active {
+                background-position: 0px -500px;
+            }
+            #top_gnb > div.item_5:active {
+                background-position: 0px -550px;
+            }
+            #top_gnb > div.item_6:active {
+                background-position: 0px -600px;
+            }
+            #top_gnb > div.item_7:active {
+                background-position: 0px -650px;
+            }
+    </style>
 </head>
 <body>
-	<header id="main_header">
-		<h1 class="logo">
-			<a href="#"><img src="Images/title.png" /></a>
-		</h1>
-		<div class="login_menu">
-			<span><a href="#">로그인</a></span> <span><a href="#">회원가입</a></span> <span><a
-				href="#">고객센터</a></span>
-		</div>
-	</header>
-	<aside id="global_aside">
-		<a><img src="http://placehold.it/90x160" /></a>
-		<a><img src="http://placehold.it/90x160" /></a>
-		<a><img src="http://placehold.it/90x160" /></a>
-		<a><img src="http://placehold.it/90x160" /></a>
-		<a><img src="http://placehold.it/90x160" /></a>
-		<a><img src="http://placehold.it/90x160" /></a>
-		<a><img src="http://placehold.it/90x160" /></a>
-		<a><img src="http://placehold.it/90x160" /></a>
-		<a><img src="http://placehold.it/90x160" /></a>
-		<a><img src="http://placehold.it/90x160" /></a>
-	</aside>
-	<nav id="top_gnb">
-		<div class="menu item_1 active"></div>
-		<div class="menu item_2"></div>
-		<div class="menu item_3"></div>
-		<div class="menu item_4"></div>
-		<div class="menu item_5"></div>
-		<div class="menu item_6"></div>
-		<div class="menu item_7"></div>
-	</nav>
+    <header id="main_header">
+        <h1 class="logo">
+            <a href="#"><img src="Images/title.png" /></a>
+        </h1>
+        <div class="login_menu">
+            <span><a href="#">로그인</a></span> <span><a href="#">회원가입</a></span> <span>
+                <a href="#">고객센터</a>
+            </span>
+        </div>
+    </header>
+    <aside id="global_aside">
+        <a><img src="http://placehold.it/90x160" /></a>
+        <a><img src="http://placehold.it/90x160" /></a>
+        <a><img src="http://placehold.it/90x160" /></a>
+        <a><img src="http://placehold.it/90x160" /></a>
+        <a><img src="http://placehold.it/90x160" /></a>
+        <a><img src="http://placehold.it/90x160" /></a>
+        <a><img src="http://placehold.it/90x160" /></a>
+        <a><img src="http://placehold.it/90x160" /></a>
+        <a><img src="http://placehold.it/90x160" /></a>
+        <a><img src="http://placehold.it/90x160" /></a>
+    </aside>
+    <nav id="top_gnb">
+        <div class="menu item_1 active"></div>
+        <div class="menu item_2"></div>
+        <div class="menu item_3"></div>
+        <div class="menu item_4"></div>
+        <div class="menu item_5"></div>
+        <div class="menu item_6"></div>
+        <div class="menu item_7"></div>
+    </nav>
 </body>
 </html>
