--- a/ModernWeb-HTML/ch09/ch09-1.html
+++ b/ModernWeb-HTML/ch09/ch09-1.html
@@ -4,17 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <title>CSS3 Transition Basic</title>
-    <link rel="stylesheet" href="StyleSheet.css" />
+    <link rel="stylesheet" href="StyleSheet-1.css" />
     <script src="prefixfree.min.js"></script>
 </head>
 <body>
-    <h1>CSS3 Transition Graph</h1>
-    <div id="graph">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
+    <div id="box">
+        <h1>Rotation</h1>
     </div>
 </body>
 </html>
