--- a/ModernWeb-HTML/B. Bootstrap/bootstrap.html
+++ b/ModernWeb-HTML/B. Bootstrap/bootstrap.html
@@ -57,6 +57,9 @@
                     <li><a href="#">Node.js</a></li>
                     <li><a href="#">API</a></li>
                 </ul>
+                <form class="navbar-form navbar-right">
+                    <input type="text" class="form-control" placeholder="Search" />
+                </form>
             </div>
         </div>
     </div>
@@ -66,28 +69,42 @@
             <div class="col-md-3">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Panel Title</h3>
-                        <i class="glyphiconglyphicon-leaf"></i>
+                        <h3 class="panel-title">
+                            <i class="glyphicon glyphicon-leaf"></i>
+                            <span>Panel Title</span>
+                        </h3>
                         <ul class="list-group">
                             <li class="list-group-item"><a href="#">HTML5</a></li>
                             <li class="list-group-item"><a href="#">CSS3</a></li>
                             <li class="list-group-item"><a href="#">ECMAScript5</a></li>
                         </ul>
-                        <ul class="list-group"></ul>
+                    </div>
+                </div>
+
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            <i class="glyphicon glyphicon-heart"></i>
+                            <span>Panel Title</span>
+                        </h3>
+                        <ul class="list-group">
+                            <li class="list-group-item"><a href="#">jQuery</a></li>
+                            <li class="list-group-item"><a href="#">HTML5 API</a></li>
+                        </ul>
+
                         <ul class="list-group"></ul>
                     </div>
                 </div>
             </div>
-            <div class="col-md-9">
 
-                <h1>Lorem Lipsum</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, dolores phaedrum facilisis duo in. Diam definiebas nam cu. Eu alia iisque expetendis cum, sed enim corrumpit prodesset ne, zril equidem eloquentiam te sit. Nam et forensibus inciderint, ex idque soluta cotidieque ius. Cu patrioque intellegam signiferumque his. Eirmod pericula at vis, te hinc quando efficiantur vix.
-                    Vim cibo tibique definiebas no. Denique definitionem eu eam, eius nihil eruditi pri te. Labitur consulatu inciderint est an, ex eam decore ponderum interesset. Usu ut paulo dignissim, ut sea labitur principes, his cu tale democritum. Mea dico volumus cu, etiam theophrastus te nam, eam reque aeque evertitur no.
-                    Vix forensibus scripserit ex. Sed odio vide id, iriure delectus appellantur ius ut, pri ei brute graecis appellantur. Conceptam theophrastus mei cu, nulla vituperata ei duo, fugit definitiones no mea. Quo sale partiendo ut, option timeam deleniti ut ius, ex cum ludus tantas dolore.
-                    Vim nulla perpetua consulatu an. Melius admodum deserunt ad pri. Facete perfecto has cu. Tacimates gloriatur ex sit. Sed et liber meliore, fastidii honestatis ad qui, his veniam cetero eu. Altera latine dolorum pro ut, oratio expetenda dissentiet at mea.
-                    Sed dolorem consectetuer in, utroque percipit ea has. No pri copiosae appetere dignissim, nec equidem periculis no, mea ad cibo duis dolores. Ea modo nihil impetus nec, choro hendrerit ut sit, in eos affert bonorum. Ius et enim tractatos signiferumque. Eum te laoreet accommodare, alia mucius principes usu eu, eu vim inani reprimique.
-                </p>
+            <div class="col-md-9">
+                <div class="jumbotron">
+                    <h1>HTML5 + CSS3 Basic</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, dolores phaedrum facilisis duo in. 
+                    </p>
+                    <a class="btnbtn-primary btn-large" href="#">Learn More</a>
+                </div>
                 <p>
                     Lorem ipsum dolor sit amet, dolores phaedrum facilisis duo in. Diam definiebas nam cu. Eu alia iisque expetendis cum, sed enim corrumpit prodesset ne, zril equidem eloquentiam te sit. Nam et forensibus inciderint, ex idque soluta cotidieque ius. Cu patrioque intellegam signiferumque his. Eirmod pericula at vis, te hinc quando efficiantur vix.
                     Vim cibo tibique definiebas no. Denique definitionem eu eam, eius nihil eruditi pri te. Labitur consulatu inciderint est an, ex eam decore ponderum interesset. Usu ut paulo dignissim, ut sea labitur principes, his cu tale democritum. Mea dico volumus cu, etiam theophrastus te nam, eam reque aeque evertitur no.
@@ -103,7 +120,6 @@
                     Sed dolorem consectetuer in, utroque percipit ea has. No pri copiosae appetere dignissim, nec equidem periculis no, mea ad cibo duis dolores. Ea modo nihil impetus nec, choro hendrerit ut sit, in eos affert bonorum. Ius et enim tractatos signiferumque. Eum te laoreet accommodare, alia mucius principes usu eu, eu vim inani reprimique.
                 </p>
             </div>
-
         </div>
     </div>
 </body>
