--- a/ModernWeb-JS/ch01/HTMLPage2.html
+++ b/ModernWeb-JS/ch01/HTMLPage2.html
@@ -23,7 +23,7 @@
         //    var output;
         //}
 
-        //function d() { alert("<p>" + new Date() + "<p>") }
+        //function d() { alert("<p>" + new Date() + "<p>"); }
 
         //var intervalID = setInterval(d, 1000);
         //setTimeout(function () { clearInterval(intervalID); }, 5000);
@@ -31,15 +31,33 @@
         //alert(Number("123a"));
         //alert(parseInt("b123a4"));
 
-        var person = {
-            name: "Insoo",
-            eat: function (food) { alert(this.name + "안녕" );}
-        }
-        //person.eat();
+        //var person = {
+        //    name: "Insoo",
+        //    eat: function (food) { alert(this.name + "안녕" );}
+        //}
+        ////person.eat();
 
-        for (var key in person) {
-            alert(person[key]);
-        }
+        //for (var key in person) {
+        //    alert(person[key]);
+        //}
+
+        //function Student(name) { this.name = name;}
+
+        //var cc = new Student("Insoo");
+        //alert(cc.name);
+
+        //var numberFromLiteral = 273;
+        //var numberFromObject = new Number(273);
+        //var output = "";
+        //output += (numberFromLiteral.constructor == Number);
+        //output += "\n";
+        //output += (numberFromObject.constructor == Number);
+
+        //document.write(output);
+
+        var date = new Date();
+
+        alert(date.getDate());
 
         
     </script>
