--- a/ModernWeb-JS/ch17/HTMLPage17.8.html
+++ b/ModernWeb-JS/ch17/HTMLPage17.8.html
@@ -40,13 +40,13 @@
 </head>
 <body>
     <ul id="inner-fade">
-        <li><img src="Chrysanthemum.jpg"</li>
-        <li><img src="Desert.jpg"</li>
-        <li><img src="Hydrangeas.jpg"</li>
-        <li><img src="Jellyfish.jpg"</li>
-        <li><img src="Koala.jpg"</li>
-        <li><img src="Lighthouse.jpg"</li>
-        <li><img src="Penguins.jpg"</li>
+        <li><img src="Chrysanthemum.jpg" /></li>
+        <li><img src="Desert.jpg" /></li>
+        <li><img src="Hydrangeas.jpg" /></li>
+        <li><img src="Jellyfish.jpg" /></li>
+        <li><img src="Koala.jpg" /></li>
+        <li><img src="Lighthouse.jpg" /></li>
+        <li><img src="Penguins.jpg" /></li>
     </ul>
 </body>
 </html>
