--- a/ModernWeb-JS/ch22/public/index.html
+++ b/ModernWeb-JS/ch22/public/index.html
@@ -5,7 +5,7 @@
     <script src="jquery-3.2.1.js"></script>
 
     <script>
-        var request = new XMLHttpRequest();
+        var request = new XMLHttpRequest();;
 
         //request.open('GET', '/data.html', true);
         //request.send();
