--- a/ModernWeb-JS/ch01/HTMLPage2.html
+++ b/ModernWeb-JS/ch01/HTMLPage2.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8" />
     <title></title>
     <script>
+        
+        var a = 10, b = "aa";
+        var input = " 123a";
+        alert(Number(input));
+   
         //for (var i = 0; i < 3; i++) {
         //    setTimeout(() => { alert(i); }, 1000 * i);
         //}
