--- a/ModernWeb-JS/ch10/HTMLPage10.html
+++ b/ModernWeb-JS/ch10/HTMLPage10.html
@@ -5,71 +5,83 @@
     <meta charset="utf-8" />
     <title></title>
     <script>
-        //window.onload = function () {
-        //    var clock = document.getElementById("clock");
-        //    setInterval(function () { clock.innerHTML = new Date().toString(); }, 1000);
+        window.onload = function () {
+            var clock = document.getElementById("clock");
+            setInterval(function () { clock.innerHTML = new Date().toString(); }, 1000);
 
-        //    var sun = document.getElementById("sun");
-        //    var earth = document.getElementById("earth");
-        //    var moon = document.getElementById("moon");
+            var sun = document.getElementById("sun");
+            var earth = document.getElementById("earth");
+            var moon = document.getElementById("moon");
 
-        //    sun.style.position = "absolute";
-        //    earth.style.position = "absolute";
-        //    moon.style.position = "absolute";
+            sun.style.position = "absolute";
+            earth.style.position = "absolute";
+            moon.style.position = "absolute";
 
-        //    sun.style.left = "250px";
-        //    sun.style.top = 200 + "px";
+            sun.style.left = "250px";
+            sun.style.top = 200 + "px";
 
-        //    var earthAngle = 0;
-        //    var moonAngle = 0;
+            var earthAngle = 0;
+            var moonAngle = 0;
 
-        //    clock.onclick = function (e) {
-        //        var event = e || window.event;
+            clock.onclick = function (e) {
+                var event = e || window.event;
 
-        //        for (var key in event) {
+                for (var key in event) {
 
-        //            document.body.innerHTML += "<p>" + key + ": " + event[key] + "</p>";
+                    document.body.innerHTML += "<p>" + key + ": " + event[key] + "</p>";
 
-        //        }
-        //        this.style.color = "orange";
-        //        this.style.backgroundColor = "yellow";
-        //        //clock.onclick = null;
+                }
+                this.style.color = "orange";
+                this.style.backgroundColor = "yellow";
+                //clock.onclick = null;
 
-        //    };
+            };
 
-        //    setInterval(function () {
-        //        var earthLeft = 250 + 150 * Math.cos(earthAngle);
-        //        var earthTop = 200 + 150 * Math.sin(earthAngle);
-        //        var moonLeft = earthLeft + 50 * Math.cos(moonAngle);
-        //        var moonTop = earthTop + 50 * Math.sin(moonAngle);
+            setInterval(function () {
+                var earthLeft = 250 + 150 * Math.cos(earthAngle);
+                var earthTop = 200 + 150 * Math.sin(earthAngle);
+                var moonLeft = earthLeft + 50 * Math.cos(moonAngle);
+                var moonTop = earthTop + 50 * Math.sin(moonAngle);
 
-        //        earth.style.left = earthLeft + "px";
-        //        earth.style.top = earthTop + "px";
-        //        moon.style.left = moonLeft + "px";
-        //        moon.style.top = moonTop + "px";
+                earth.style.left = earthLeft + "px";
+                earth.style.top = earthTop + "px";
+                moon.style.left = moonLeft + "px";
+                moon.style.top = moonTop + "px";
 
-        //        earthAngle += 0.1;
-        //        moonAngle += 0.3;
-        //    }, 1000 / 10);
+                earthAngle += 0.1;
+                moonAngle += 0.3;
+            }, 1000 / 10);
 
-        //};
+        };
 
-        function test() {
-            try { alert("a"); } catch (exception) {
-                alert("b"); return;
-            }
+        //function test() {
+        //    try { alert("a"); } catch (exception) {
+        //        alert("b"); return;
+        //    }
 
-            alert("c");
-        }
+        //    alert("c");
+        //}
 
-        test();
+        //test();
 
     </script>
+    <style>
+     div{
+         background-color:red;
+         left:100px;
+         top:100px;
+         position:absolute;
+
+     }
+    </style>
 </head>
 <body>
-    <h1 id="clock"></h1>
-    <h1 id="sun">@</h1>
-    <h1 id="earth">0</h1>
-    <h1 id="moon">*</h1>
-</body>
+
+    <div background="red" height="100px" left="200px" top="200px">
+        <h1 id="clock"></h1>
+        <h1 id="sun">@</h1>
+        <h1 id="earth">0</h1>
+        <h1 id="moon">*</h1>
+        .<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />
+    </div></body>
 </html>
