--- a/ModernWeb-JS/ch16/HTMLPage16.11.html
+++ b/ModernWeb-JS/ch16/HTMLPage16.11.html
@@ -12,6 +12,8 @@
 
         $(document).ready(function () {
 
+            $('textarea').attr({ 'max-length':150});
+
             $('textarea').keyup(function () {
                 var inputLength = $(this).val().length;
                 var remain = 150 - inputLength;
@@ -24,7 +26,7 @@
 
                 var scrollHeight = $(window).scrollTop() + $(window).height();
                 var documentHeight = $(document).height();
-                //alert($(window).scrollTop() + ' : ' + $(window).height());
+                alert($(window).scrollTop() + ' : ' + $(window).height() + ' : ' + $(document).height());
 
                 if (scrollHeight >= documentHeight - 200) {
                     for (var i = 0; i < 10; i++) {
