--- a/ModernWeb-JS/ch16/HTMLPage16.8.html
+++ b/ModernWeb-JS/ch16/HTMLPage16.8.html
@@ -5,23 +5,22 @@
     <meta charset="utf-8" />
     <title></title>
     <style>
-        *{
+        * {
             morder 3px solid black;
         }
 
         .outer {
-            width:200px;
-            height:200px;
+            width: 200px;
+            height: 200px;
             background: orange;
             padding: 50px;
             margin: 10px;
-
         }
+
         .inner {
             width: 100%;
             height: 100%;
             background: red;
-           
         }
     </style>
     <script src="jquery-3.2.1.js"></script>
@@ -31,7 +30,7 @@
 
             $('a').click(function (event) {
                 $(this).css('background-color', 'blue');
-                //event.stopPropagation();
+                event.stopPropagation();
                 event.preventDefault();
             });
 
@@ -43,16 +42,20 @@
                 $('body').append('<h1>Mouseover</h1>');
             }).mouseenter(function () {
                 $('body').append('<h1>MouseEnter</h1>');
-            });
+                }).mouseleave(function () {
+                    $('body').append('<h1>MouseLeave</h1>');
+                }).mouseout(function () {
+                    $('body').append('<h1>MouseOut</h1>');
+                });
 
         });
 
     </script>
 </head>
 <body>
-   <h1>
-       <a href="http://hanbit.co.kr">Hanbit Media</a>
-   </h1>
+    <h1>
+        <a href="http://hanbit.co.kr">Hanbit Media</a>
+    </h1>
     <div class="outer">
         <div class="inner"></div>
     </div>
